[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/robotomono.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/ui.tres" type="Theme" id=2]
[ext_resource path="res://ui/ui.gd" type="Script" id=3]
[ext_resource path="res://main/icon.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]

[node name="Message" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_bottom = 35.0
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HUD" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Bars" type="GridContainer" parent="HUD"]
margin_left = 30.0
margin_top = 30.0
margin_right = 994.0
margin_bottom = 570.0
__meta__ = {
"_edit_lock_": true
}

[node name="Menu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="Menu"]
margin_left = 362.0
margin_top = 99.0
margin_right = 662.0
margin_bottom = 500.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 4

[node name="TitleWrap" type="HBoxContainer" parent="Menu/Main"]
margin_right = 300.0
margin_bottom = 72.0

[node name="Logo" type="TextureRect" parent="Menu/Main/TitleWrap"]
margin_right = 72.0
margin_bottom = 72.0
rect_min_size = Vector2( 72, 72 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Title" type="Label" parent="Menu/Main/TitleWrap"]
margin_left = 76.0
margin_top = 11.0
margin_right = 300.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "PaddleBattle"
align = 1

[node name="DevWrap" type="VBoxContainer" parent="Menu/Main"]
margin_top = 76.0
margin_right = 300.0
margin_bottom = 166.0

[node name="Discord0" type="Button" parent="Menu/Main/DevWrap"]
margin_right = 300.0
margin_bottom = 43.0
text = "Discord 0"

[node name="Discord1" type="Button" parent="Menu/Main/DevWrap"]
margin_top = 47.0
margin_right = 300.0
margin_bottom = 90.0
text = "Discord 1"

[node name="Name" type="Label" parent="Menu/Main"]
margin_top = 170.0
margin_right = 300.0
margin_bottom = 213.0
size_flags_horizontal = 3
text = "NO NAME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" type="Button" parent="Menu/Main"]
margin_top = 217.0
margin_right = 300.0
margin_bottom = 260.0
size_flags_horizontal = 3
text = "BigMap"

[node name="Play" type="Button" parent="Menu/Main"]
margin_top = 264.0
margin_right = 300.0
margin_bottom = 307.0
text = "Play"

[node name="Join" type="Button" parent="Menu/Main"]
margin_top = 311.0
margin_right = 300.0
margin_bottom = 354.0
text = "Join"

[node name="Version" type="Label" parent="Menu/Main"]
margin_top = 358.0
margin_right = 300.0
margin_bottom = 401.0
text = "NO VERSION"
align = 1

[node name="Join" type="VBoxContainer" parent="Menu"]
visible = false
margin_left = 362.0
margin_top = 95.0
margin_right = 662.0
margin_bottom = 505.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 4

[node name="Label" type="Label" parent="Menu/Join"]
margin_right = 300.0
margin_bottom = 43.0
text = "Join"
align = 1

[node name="HSeparator" type="HSeparator" parent="Menu/Join"]
margin_top = 47.0
margin_right = 300.0
margin_bottom = 51.0

[node name="FriendsWrap" type="ScrollContainer" parent="Menu/Join"]
margin_top = 55.0
margin_right = 300.0
margin_bottom = 355.0
rect_min_size = Vector2( 0, 300 )
follow_focus = true
scroll_horizontal_enabled = false

[node name="Friends" type="VBoxContainer" parent="Menu/Join/FriendsWrap"]
margin_right = 300.0
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="Menu/Join"]
margin_top = 359.0
margin_right = 300.0
margin_bottom = 363.0

[node name="Back" type="Button" parent="Menu/Join"]
margin_top = 367.0
margin_right = 300.0
margin_bottom = 410.0
text = "Back"
